facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__tuple_struct_with_renamed_field.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
assertion_line: 976
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Point(\n            #[facet(rename = \"x_coordinate\")]\n            f32,\n            #[facet(rename = \"y_coordinate\")]\n            f32,\n            #[facet(rename = \"z_coordinate\")]\n            f32,\n        );\n        \"#)"
---
#[used]
static POINT_SHAPE: &'static ::facet::Shape = <Point as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Point {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable =
            ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(f, "Point"));
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("x_coordinate")
                        .shape(::facet::shape_of(&|s: &Point| &s.0))
                        .offset(::core::mem::offset_of!(Point, 0))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("y_coordinate")
                        .shape(::facet::shape_of(&|s: &Point| &s.1))
                        .offset(::core::mem::offset_of!(Point, 1))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("z_coordinate")
                        .shape(::facet::shape_of(&|s: &Point| &s.2))
                        .offset(::core::mem::offset_of!(Point, 2))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("Point")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::TupleStruct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
