facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__unit_struct_generic.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
assertion_line: 418
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Blah<const C: usize = 3>\n        where\n             [u8; C]: Debug; // Example bound using the const generic\n        \"#)"
---
#[automatically_derived]
unsafe impl<'__facet, const C: usize> ::facet::Facet<'__facet> for Blah<C>
where
    [u8; C]: Debug,
{
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable =
            ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(f, "Blah"));
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const { [] };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("Blah")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::Unit)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
